[package]
name = "vhost-device-media"
version = "0.1.0"
authors = ["Albert Esteve <aesteve@redhat.com>"]
description = "A virtio-media device using the vhost-user protocol."
repository = "https://github.com/rust-vmm/vhost-device"
keywords = ["vhost", "media", "virt", "backend"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#xen = ["vm-memory/xen", "vhost/xen", "vhost-user-backend/xen"]

[dependencies]
bitflags = "2.4.2"
clap = { version = "4.4",  features = ["derive"] }
env_logger = "0.11"
epoll = "4.3"
num_enum = "0.7"
log = "0.4"
libc = "0.2.153"
thiserror = "1.0"
anyhow = "1.0.32"
futures-executor = { version = "0.3", features = ["thread-pool"] }
vhost = { version = "0.10", features = ["vhost-user-backend"] }
vhost-user-backend = "0.13"
virtio-bindings = "0.2.1"
virtio-queue = "0.11"
vm-memory = "0.14.0"
vmm-sys-util = "0.12"
ref-cast = "1.0.22"
#virtio-media = { path = "../../../virtio-media/device" }
virtio-media = { git = "https://github.com/chromeos/virtio-media", rev = "c84074d52fa9422baf29346f27a22f67fb470316" }
v4l2r = { git =  "https://github.com/Gnurou/v4l2r", branch = "master" }
zerocopy = "0.7.32"

[dev-dependencies]
assert_matches = "1.5"
rstest = "0.18.2"
tempfile = "3.9.0"
virtio-queue = { version = "0.11", features = ["test-utils"] }
vm-memory = { version = "0.14.0", features = ["backend-mmap", "backend-atomic"] }
